change welcome + added  Custom Exentriq CSS

--- a/css/_variables.scss
+++ b/css/_variables.scss
@@ -172,11 +172,11 @@ $welcomePageHeaderBackgroundPosition: center;
 $welcomePageHeaderBackgroundRepeat: none;
 $welcomePageHeaderBackgroundSize: cover;
 $welcomePageHeaderPaddingBottom: 0px;
-$welcomePageHeaderTitleMaxWidth: initial;
+$welcomePageHeaderTitleMaxWidth: 800px;
 $welcomePageHeaderTextAlign: center;
 
 $welcomePageHeaderContainerDisplay: flex;
-$welcomePageHeaderContainerMargin: 104px 32px 0 32px;
+$welcomePageHeaderContainerMargin: auto;
 
 $welcomePageHeaderTextTitleMarginBottom: 0;
 $welcomePageHeaderTextTitleFontSize: 42px;
