--- a/css/main.scss
+++ b/css/main.scss
@@ -93,5 +93,5 @@ $flagsImagePath: "../images/";
 @import 'plan-limit';
 @import 'polls';
 @import 'notifications';
-
+@import 'customExentriq';
 /* Modules END */
