--- a/css/main.scss
+++ b/css/main.scss
@@ -80,5 +80,6 @@ $flagsImagePath: "../images/";
 @import 'reactions-menu';
 @import 'plan-limit';
 @import 'polls';
+@import 'customExentriq';
 
 /* Modules END */
